Added install target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,32 @@ include_directories (
 	)
 add_subdirectory( qcodeedit )
 add_subdirectory( src )
+
+set ( MINERVA_FILES qxs/cpp.qxf
+	qxs/css.qnfa
+	qxs/xml.qxf
+	qxs/css.qxf
+	qxs/dox.qnfa
+	qxs/dox.qxf
+	qxs/marks.qxm
+	qxs/qtscript.qxf
+	qxs/python.qnfa
+	qxs/snippet.qnfa
+	qxs/php.qnfa
+	qxs/qtscript.qnfa
+	qxs/tex.qnfa
+	qxs/tex.qxf
+	qxs/formats.qxf
+	qxs/python.qxf
+	qxs/cpp.qnfa
+	qxs/bibtex.qxf
+	qxs/csharp.qxf
+	qxs/bibtex.qnfa
+	qxs/csharp.qnfa
+	qxs/pro.qnfa
+	qxs/xml.qnfa
+	qxs/coldfusion.qnfa
+	qxs/php.qxf
+	qxs/pro.qxf)
+
+install ( FILES ${MINERVA_FILES} DESTINATION share/minerva )
