--- a/minervaconfig.h.in
+++ b/minervaconfig.h.in
@@ -2,4 +2,4 @@
 #define VERSION_MINOR 0
 #define VERSION_REV 1
 #define VERSION_EXT @MINERVA_VERSION_EXT@
-#define ROOTDIR @CMAKE_INSTALL_PREFIX@
+#define ROOTDIR "@CMAKE_INSTALL_PREFIX@"
