--- a/minervaconfig.h.in
+++ b/minervaconfig.h.in
@@ -1,5 +1,5 @@
-#define VERSION_MAJOR 0
-#define VERSION_MINOR 0
-#define VERSION_REV 1
-#define VERSION_EXT @MINERVA_VERSION_EXT@
+#define VERSION_MAJOR @MINERVA_VER_MAJOR@
+#define VERSION_MINOR @MINERVA_VER_MINOR@
+#define VERSION_REV @MINERVA_VER_PATCH@
+#define VERSION_EXT "@MINERVA_VER_EXT@"
 #define ROOTDIR "@CMAKE_INSTALL_PREFIX@"
