--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,31 +2,24 @@ include_directories (
 	#${QCodeEdit_SOURCE_DIR}
 	#${QCodeEdit_SOURCE_DIR}
 	#${QCodeEdit_SOURCE_DIR}
+	${libminerva_SOURCE_DIR}
+	${libminerva_BINARY_DIR}
 	${QCodeEdit_SOURCE_DIR}/document
 	${Minerva_SOURCE_DIR}/src
 	${Minerva_BINARY_DIR}/src
 	${QCodeEdit_SOURCE_DIR})
 set ( Minerva_HDRS
-	minervatabwidget.h
 	)
 
 set ( Minerva_SRCS
 	main.cpp
-	minervawindow.cpp
-	minervadocument.cpp
-	minervatabwidget.cpp
 	minervasettings.cpp
 	minervaapplication.cpp
 	)
 
-set ( Minerva_UIS
-	minervawindow.ui
-	)
-QT4_WRAP_UI(UIS ${Minerva_UIS})
-set ( EXECUTABLE_OUTPUT_PATH ${Minerva_BINARY_DIR} )
+
+
 set ( Minerva_MOCS
-	minervawindow.h
-	minervadocument.h
 	minervasettings.h
 	minervaapplication.h
 	)
@@ -40,7 +33,8 @@ configure_file (
   )
 
 
-add_executable ( minerva ${Minerva_SRCS} ${UIS} ${RSCS} ${TRS} ${MOCS} )
-target_link_libraries ( minerva qcodeedit  ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY} )
+add_executable ( minerva ${Minerva_SRCS} ${RSCS} ${TRS} ${MOCS} )
+target_link_libraries ( minerva qcodeedit libminerva  ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY} )
 
 install ( TARGETS minerva DESTINATION bin )
+install ( FILES ${Minerva_MOCS} DESTINATION include )
