--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,11 +7,13 @@ include_directories(${libminerva_SOURCE_DIR}
 		    ${QCodeEdit_SOURCE_DIR})
 set (	libminerva_HDRS 
 	minervadocument.h 
-	minervatabwidget.h
+	minervatabwidget.h  
+	plugininterface.h
 	minervawindow.h)
 set (	libminerva_SRCS 
 	minervadocument.cpp 
 	minervatabwidget.cpp
+	plugininterface.cpp
 	minervawindow.cpp)
 set ( libminerva_iUIS
 	minervawindow.ui
@@ -20,7 +22,8 @@ QT4_WRAP_UI(libminerva_UIS ${libminerva_iUIS})
 QT4_WRAP_CPP ( libminerva_MOCS ${libminerva_HDRS})
 add_library ( libminerva SHARED ${libminerva_SRCS} ${libminerva_MOCS} ${libminerva_UIS})
 target_link_libraries ( libminerva  ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} )
-set_target_properties( libminerva PROPERTIES
+set_target_properties  ( libminerva PROPERTIES
 			OUTPUT_NAME "minerva"
 			VERSION ${MINERVA_VER_MAJOR}
 			SOVERSION "${MINERVA_VER_MAJOR}.${MINERVA_VER_MINOR}" )
+install (FILES ${libminerva_HDRS} DESTINATION include )
