--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -21,9 +21,10 @@ set ( libminerva_iUIS
 QT4_WRAP_UI(libminerva_UIS ${libminerva_iUIS})
 QT4_WRAP_CPP ( libminerva_MOCS ${libminerva_HDRS})
 add_library ( libminerva SHARED ${libminerva_SRCS} ${libminerva_MOCS} ${libminerva_UIS})
-target_link_libraries ( libminerva  ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} )
+target_link_libraries ( libminerva qcodeedit  ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} )
 set_target_properties  ( libminerva PROPERTIES
 			OUTPUT_NAME "minerva"
 			VERSION ${MINERVA_VER_MAJOR}
 			SOVERSION "${MINERVA_VER_MAJOR}.${MINERVA_VER_MINOR}" )
-install (FILES ${libminerva_HDRS} DESTINATION include )
+install (TARGETS libminerva DESTINATION lib )
+install (FILES ${libminerva_HDRS} DESTINATION include/minerva )
