Updated build instructions in README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required( VERSION 2.6 )
 project(Minerva)
 include (config.cmake)
-set ( CMAKE_BUILD_TYPE Release )
+#set ( CMAKE_BUILD_TYPE Release )
 add_definitions ( -Wall )
 find_package ( Qt4 REQUIRED )
 include ( ${QT_USE_FILE} )
@@ -57,5 +57,6 @@ SET(CPACK_PACKAGE_VERSION_MINOR ${MINERVA_VER_MINOR})
 SET(CPACK_PACKAGE_VERSION_PATCH "${MINERVA_VER_PATCH}${MINERVA_VER_EXT}")
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
 SET(CPACK_PACKAGE_EXECUTABLES "minerva" "Minerva Editor")
+SET(CPACK_PACKAGE_CONTACT "Radu Andries <admiral0@tuxfamily.org>")
 include (CPack)
 
